# bizy

./: .bandit  .behaverc  .env.example  .gitignore  .pre-commit-config.yaml  CASES.md  CLAUDE.md  CNAME  CONTRIBUTING.md  LICENSE  LOGIC.md  MANIFEST.in  README.md  complete_bdd_demo.py  demo_bdd_integration.py  final_validation.py  pyproject.toml  reference_implementation.py  setup.py
.github/workflows/: ci.yml  deploy-docs.yml  publish-pypi.yml
bizy/: __init__.py
bizy/adapters/: __init__.py  fastmcp_adapter.py  langchain_adapter.py  mcp_adapter.py  mcp_toolkit_adapter.py  registry.py  semantic_kernel_adapter.py  temporal_adapter.py  zep_adapter.py
bizy/bdd/: __init__.py  documentation_generator.py  gherkin_parser.py  scenario_executor.py  step_definitions.py
bizy/cli/: __init__.py  scenario_builder.py
bizy/coordination/: __init__.py  load_balancer.py  monitoring.py  protocol_translator.py  unified_api.py
bizy/core/: __init__.py  business_rule.py  framework_adapter.py  meta_orchestrator.py
bizy/events/: __init__.py  event_bus.py  persistence.py  routing.py  schemas.py
bizy/rules/: __init__.py  rule_compiler.py  rule_executor.py  rule_parser.py  rule_validator.py
bizy/scenarios/: __init__.py  customer_service.py  fraud_detection.py  inventory_management.py
community_packages/: README.md
community_packages/behave-ai-orchestration/: setup.py
community_packages/fastmcp/: README.md
community_packages/fastmcp/examples/: business_context_demo.py
community_packages/langchain/: README.md
community_packages/temporal/: README.md
docs/: BUSINESS_STAKEHOLDER_TUTORIAL.md
docs/architecture/: overview.md
docs/community/: contributing.md
docs/deployment/: production_deployment_guide.md
docs/standards/: business_logic_orchestration_standard.md
docs/tutorials/: getting_started.md
examples/: rule_execution_example.py  simple_demo.py
examples/rules/: customer_escalation.yaml  fraud_detection.yaml  inventory_optimization.yaml
features/: cross_framework_orchestration.feature  environment.py
features/steps/: orchestration_steps.py
templates/: customer_service_automation.feature  document_processing_workflows.feature
tests/: __init__.py  test_basic.py
tests/core/: test_business_rule.py
website/: README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
website/docs/: intro.md
(+27 files in other folders)
